웹 스크래핑 예시 코드 변경

--- a/simple.html
+++ b/simple.html
@@ -7,6 +7,8 @@
   <body>
     <h1>웹 스크래핑</h1>
 
+    <p>인터넷 데이터 추출</p>
+
     <table>
       <tr><td>모듈</td><td>설명</td></tr>
       <tr><td>requests</td><td>웹 문서 다운로드</td></tr>
